# Fit4Med

./: .gitignore  .repos  LICENSE  README.md
.github/workflows/: licensing_checker.yml  ros2.yml
bash_scripts/: bash_scripts  ec_coe_fault_reset.sh  ec_wait_ready.sh  fit4med_from_robot_sync.sh  fit4med_robot_sync_common.sh  fit4med_to_robot_sync.sh  kill_fmrr_apps.sh  kill_ros2_nodes.sh  kill_ros_apps.sh  launch_ros2_bridge.sh  launch_ros2_env.sh  launch_ros2_env_moveit.sh  launch_ros2_env_z_recovery.sh  log.sh  start_bag.sh  stop_bag.sh
bash_scripts/logs/: kill_ros2_log.txt
check_homing_done/: package.xml  setup.cfg  setup.py
check_homing_done/check_homing_done/: homing_done_listener.py
controller_logger/: CMakeLists.txt  controller_logger_plugin.xml  package.xml
controller_logger/include/controller_logger/: controller_logger.hpp
controller_logger/src/: controller_logger.cpp  controller_logger_parameters.yaml
fit4med_ee_joint_hw/: CMakeLists.txt  hw_plugin.xml  package.xml
fit4med_ee_joint_hw/include/fit4med_ee_joint_hw/: fit4med_ee_joint_hw.hpp
fit4med_ee_joint_hw/src/: fit4med_ee_joint_hw.cpp
fit4med_plc_controller/: CMakeLists.txt  package.xml  plc_controller_plugin.xml
fit4med_plc_controller/src/: plc_controller.cpp  plc_controller_parameters.yaml
fmrrehab_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fmrrehab_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kinematics_real.yaml  moveit.rviz  moveit_controllers.yaml  moveit_planning_pipeline.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  ros2_fake_controllers.yaml  tecnobody.ros2_control.xacro  tecnobody.srdf  tecnobody.urdf.xacro  tecnobody_real.ros2_control.xacro  tecnobody_real.urdf.xacro
fmrrehab_moveit_config/launch/: abb_moveit_wrapper.launch.py  demo.launch.py  demo_custom.launch.py  fmrrehab_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  real.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fmrrehab_moveit_config/urdf/: tecnobody.srdf  tecnobody.urdf.xacro  tecnobody_real.ros2_control.xacro  tecnobody_real.urdf.xacro
plc_controller/: CMakeLists.txt  package.xml  plc_controller_plugin.xml
plc_controller/include/plc_controller/: parameter_utils.hpp  plc_controller.hpp
plc_controller/src/: plc_controller.cpp  plc_controller_parameters.yaml
plc_controller/test/integration/: test_plugin_load.cpp
plc_controller/test/unit/: test_parameter_utils.cpp
plc_controller_msgs/: CMakeLists.txt  package.xml
plc_controller_msgs/msg/: PlcController.msg
plc_manager/: package.xml  setup.cfg  setup.py
plc_manager/plc_manager/: environment_manager.py  ethercat_monitor.py  ethercat_slaves_status_check_node.py  fsm.py  fsm_config.py  gui_status.py  plc_commands.py  plc_manager.py  plc_types.py  udp_client.py  utils.py
plc_manager/test/: test_plc_manager_launch.py  test_udp_client.py
ps_scripts/: fmrr_bringup.ps1  fmrr_cleanup.ps1  fmrr_gui.ps1  fmrr_retrieve_logs.ps1  fmrr_scp.ps1  fmrr_ssh.ps1
rehab_gui/: .gitignore  FMRRMainWindow.ui  RobotWindow.py  package.xml  setup.cfg  setup.py
rehab_gui/Movements/: HtM_right_bell_2s_transformed.yaml  HtM_right_bell_2s_transformed_v2.yaml  HtM_right_bell_transf_231025.yaml  Htm_right_4pts_good.yaml  TEST_TECNOBODY.yaml  htm_chiara_right_190226.yaml  htm_dx_caimmi.yaml  htm_left_020226.yaml  htm_right_240226.yaml  htm_right_bell_0807.yaml  htm_right_old.yaml  htm_right_oldold.yaml  htm_sx_caimmi.yaml  output.yaml  pippo  provaDx.yaml  provaSx.yaml  reaching_bell_right2_1206.yaml  reaching_bell_right3_1206.yaml  reaching_dx_caimmi_0203.yaml  reaching_right_190226.yaml  test2_dummy.yaml  test_HtM_left_bell_2s_1706.yaml  test_HtM_right(left)_bell_2s_1706.yaml  test_move.yaml  test_reaching_const_1706.yaml  test_reaching_left_bell_1706.yaml  test_reaching_left_bell_3sec_1706.yaml  test_reaching_right_bell_y.yaml
rehab_gui/Protocols/: Test_Marco_protocol  dummy_protocol.yaml  test_marco_protocol.yaml  test_protocol.yaml
rehab_gui/config/: dummy_protocol.yaml  test_protocol.yaml
rehab_gui/launch/: run_gui.launch.py
rehab_gui/rehab_gui/: FMRRMainProgram.py  FMRRMainProgramBKP.py  FMRRMainWindow.py  FMRRMainWindow.py.20250611.bkp  FMRRMainWindow.ui  FMRRMainWindowBKP.py  GUIMainWindow.ui  MC_Tools.py  MotorsWindow.py  MovementProgram.py  MovementWindow.py  MovementWindow.ui  RehabilitationMovementWindow.py  RehabilitationMovementWindow.py.old  RobotProgram.py  RobotWindow.py  RobotWindow.ui  RosCommunicationManager.py  RosReadyUDPServer.py  TrainingProtocolWindow.py  TrainingProtocolWindow_ui.py  UdpCommunicationManager.py  (+5 more)
rehab_trajectory_planner/: CMakeLists.txt  package.xml
rehab_trajectory_planner/config/: tlog_intial_sisl_2024-08-02-18:07:52.yaml  tlog_intial_sisl_2024-08-02-18:12:25.yaml  tlog_intial_sisl_2024-08-02-18:22:14.yaml  tlog_intial_sisl_2024-08-02-18:34:08.yaml  tlog_intial_sisl_2024-08-05-17:42:58.yaml  tlog_intial_sisl_2024-08-05-17:56:14.yaml  tlog_intial_sisl_2024-08-05-18:03:10.yaml  tlog_intial_sisl_2025-02-18-11:38:05.yaml  tlog_optimized_sisl_2024-08-05-18:03:10.yaml  tlog_optimized_sisl_2025-02-18-11:38:05.yaml
rehab_trajectory_planner/include/: old_header.txt
rehab_trajectory_planner/include/rehab_trajectory_planner/: rehab_trajectory_planner.hpp
rehab_trajectory_planner/src/: rehab_trajectory_planner.cpp
remapping_controller/: CMakeLists.txt  package.xml  remapping_controller.xml
remapping_controller/include/remapping_controller/: remapping_controller.hpp
remapping_controller/src/: remapping_controller.cpp  remapping_controller_parameters.yaml
reset_coe_faults/: CMakeLists.txt  README.md  package.xml  reset_coe_faultsConfig.cmake.in  reset_coe_faultsConfigVersion.cmake.in
reset_coe_faults/src/: reset_coe_faults.cpp
tecnobody_msgs/: CMakeLists.txt  package.xml
tecnobody_workbench/: CMakeLists.txt  package.xml
tecnobody_workbench_utils/: package.xml  setup.cfg  setup.py
(+164 files in other folders)
